# otaku-ai

./: README.md  main.py  pyproject.toml  requirements.txt
artifacts/: sentiment_model.pkl  tfidf_vectorizer.pkl
dashboard/: Home.py
dashboard/pages/: 1_Sentiment_Predictor.py  2_Model_Insights.py  3_Dataset_Overview.py
data/processed/: anime_reviews_processed.csv  feature_importance.csv
data/raw/: anime_reviews.csv
notebooks/: 01_dataset_inspection.ipynb  02_text_preprocessing.ipynb  03_model_baseline.ipynb  04_model_interpretability.ipynb
src/features/: text_preprocessing.py
