[project]
name = "otaku-ai"
version = "0.1.0"
description = "Anime Review Sentiment Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "wordcloud>=1.9.6",
]
